# DressCast

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
dress_advice/: main.py
dress_advice/api/: __init__.py  errors.py  servicer.py
dress_advice/application/: __init__.py
dress_advice/application/use_cases/: __init__.py  get_advice.py
dress_advice/config/: __init__.py  settings.py
dress_advice/domain/: __init__.py  exceptions.py
dress_advice/infrastructure/: __init__.py
dress_advice/infrastructure/cache/: redis_cache.py
gateway/: deps.py  main.py
gateway/api/grpc/: servicer.py
gateway/api/v1/: auth.py  auth_service.py  errors.py  routes.py
gateway/api/v2/: __init__.py  routes.py
gateway/application/use_cases/: __init__.py  cities.py  dress_advice.py  forecast.py  users.py
gateway/config/: __init__.py  settings.py
gateway/infrastructure/grpc_clients/: __init__.py  clients.py  pool.py
mcp_server/: app.py  config.py  gateway_client.py  main.py  server.py
mcp_server/tools/: handlers.py
proto/: common.proto  dress_advice.proto  gateway.proto  users.proto  weather.proto
scripts/: create_admin.py  generate_proto.py
shared/: __init__.py  error_codes.py
telegram_bot/: bot.py  config.py  gateway_client.py  main.py  menu_commands.py
telegram_bot/handlers/: add_city.py  cities.py  city_callback.py  dress.py  language.py  start.py  weather.py
telegram_bot/i18n/: __init__.py  en.json  ru.json
tests/: conftest.py
tests/unit/dress_advice/: __init__.py
tests/unit/gateway/: __init__.py  test_health.py
tests/unit/users/: test_domain.py
tests/unit/weather/: __init__.py
tests/unit/workers/: __init__.py
users/: main.py
users/api/: __init__.py  errors.py  servicer.py
users/application/: __init__.py
users/application/use_cases/: __init__.py  cities.py  create_user.py  get_user_by_id.py  get_user_by_username.py  telegram.py
users/config/: __init__.py  settings.py
users/domain/: entities.py  exceptions.py
users/infrastructure/: __init__.py
weather/: main.py
weather/api/: errors.py  servicer.py
weather/config/: __init__.py  settings.py
weather/domain/: __init__.py  exceptions.py
weather/infrastructure/: __init__.py
workers/scheduler/: __init__.py  clients.py  config.py  job.py  loop.py  main.py  retry.py
(+18 files in other folders)
